test/e2e/testdata/custom-container-security-contex-userid.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: custom-container-security-contex-userid-envoyproxy
  namespace: gateway-conformance-infra
spec:
  provider:
    type: Kubernetes
    kubernetes:
      envoyDeployment:
        container:
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: custom-container-security-contex-userid-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: custom-container-security-contex-userid-envoyproxy
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-container-security-contex-userid-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: custom-container-security-contex-userid-gateway
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
